Fix: made form background darker so contrast between background and text is better

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -272,11 +272,12 @@ h1 {
     display: flex;
     flex-direction: column;
     color: #fff;
-    background-color: rgba(60, 60, 60, .95);
+    background-color: rgba(60, 60, 60, .98);
     max-width: 800px;
     max-height: 800px;
     padding: 30px;
 }
+
 
 .form-fields > h2 {
     color: #fafafa;
